src/snapshots/rusqlite_snapshot_testing__tests__empty_table.snap
---
source: src/lib.rs
expression: "read_all_rows(&conn, \"friend\")"
snapshot_kind: text
---
 SELECT * FROM friend 
------+---------------
 name | year_of_birth
